01 December 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/css/clarin-annschema.scss:
 New method (resizeOverlay()), added Attribute value in Marks.

 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 * clarin-angular/src/app/components/dialogs/detect-changes-modal/detect-changes-modal.component.ts:
 Both components now wait on the promises returned by
 TextWidgetAPI.setAnnotationSchema(), before loading the Annotations.

 * clarin-angular/src/app/components/controls/annotator-widget/annotator-widget.component.ts:
 Set updateAnnotatorTemplate() callback to return a Promise, so as callers can
 be notified when the annotation schema has been loaded, and compiled.

 * clarin-angular/src/app/services/text-widget/text-widget.service.ts: Now
 some methods return a list of Promises, if callbacks reeturn a promise.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 Minor fixes.

 * backend-django/clarin_backend/mongodb_views.py: Fixed
 TempAnnotationsView.create() to not modify in any way annotations when
 importing a set of Annotations (i.e. when transferring Annotations from DB to
 Temp).

30 November 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/inspect-document/inspect-document.component.html:
 * clarin-angular/src/app/components/views/inspect-document/inspect-document.component.ts:
 * clarin-angular/src/app/components/controls/annotation-set-inspector/:
 * clarin-angular/src/css/clarin-material.scss:
 * clarin-angular/src/css/clarin-matero.scss: New view for inspecting
 Annotations.

 * clarin-angular/src/app/components/controls/toolbar-select-annotator/toolbar-select-annotator.component.html:
 * clarin-angular/src/app/components/controls/toolbar-select-annotator/toolbar-select-annotator.component.ts: