@@ -21,6 +21,5 @@
               [annotations]="annotations"
             ></annotation-set-inspector>
             </mat-card-content>
-
   </mat-card>
 </div>
